# crypto-manager

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  RELEASE_CHECKLIST.md  RELEASE_NOTES_v0.2.0-alpha.md  RELEASE_STEPS.md  pyproject.toml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
crypto_manager/: __init__.py  bitcoin.py  config.py  doge.py  dot.py  ethereum.py  ltc.py  sol.py  transactions.py  tron.py
docs/: ONBOARDING.md  RELEASE.md  SETUP.md
scripts/: create-release.sh  setup-github-repo.sh
tests/: README.md  __init__.py  test_bitcoin.py  test_config.py  test_ethereum.py  test_integration.py  test_ltc_doge.py  test_transactions.py
